[tool.poetry]
name = "steampy"
version = "0.1.0"
description = ""
authors = ["KolesniCow <alexandr.kolesnikovv2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
rsa = "^4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
